# nb-mcp-server

./: Cargo.toml  README.md
.auxiliary/: .gitignore
.auxiliary/configuration/: AGENTS.md  copier-answers--agents.yaml  mcp-servers.json
.auxiliary/configuration/coders/claude/: settings.json
.auxiliary/configuration/coders/codex/: config.toml
.auxiliary/configuration/coders/codex/rules/: emcd.rules
.auxiliary/configuration/coders/gemini/: settings.json
.auxiliary/configuration/coders/opencode/: settings.jsonc
.auxiliary/configuration/coders/qwen/: settings.json
.auxiliary/notes/: todo.md  tools-proposal.md
.github/workflows/: releaser.yaml  tester.yaml
documentation/: conduct.md  contribution.md
documentation/architecture/openspec/changes/add-cli-version/: proposal.md  tasks.md
documentation/architecture/openspec/changes/add-cli-version/specs/server-cli/: spec.md
documentation/architecture/openspec/changes/add-notebook-autocreate/: proposal.md  tasks.md
documentation/architecture/openspec/changes/add-notebook-autocreate/specs/notebook-resolution/: spec.md
documentation/architecture/openspec/changes/archive/2026-02-05-update-notebook-resolution/: design.md  proposal.md  tasks.md
documentation/architecture/openspec/changes/archive/2026-02-05-update-notebook-resolution/specs/notebook-resolution/: spec.md
documentation/architecture/openspec/specs/notebook-resolution/: spec.md
documentation/architecture/openspec/specs/tool-surface/: design.md  spec.md
src/: git_signing.rs  main.rs  mcp.rs  nb.rs  paths.rs
