[package]
name = "nb-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server wrapping the nb CLI for LLM-friendly note-taking"
license = "MIT"

[dependencies]
# MCP server framework
rmcp = { version = "0.8", features = ["transport-io"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON Schema generation for tool parameters
schemars = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
